# mymarkdown

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
data/: org.gnome.MyMarkdown.desktop
src/: app.rs  main.rs  window.rs
